# ESP32CamVisionAI

./: .gitignore  .gitmodules  Justfile  README.md  flake.nix
api/: Cargo.toml  Justfile  go.mod
api/cmd/api/: bindings.h  main.go
api/cmd/api/lib/yolo_rs/: Cargo.toml
api/cmd/api/lib/yolo_rs/src/tests/: computer_vision.rs
api/cmd/api/lib/yolo_rs/src/yolo/: mod.rs  yolov8.rs
api/cmd/yolo_rs/: Cargo.toml
api/cmd/yolo_rs/src/: lib.rs
api/src/: lib.rs  main.rs
api/src/configs/model/: mod.rs  yolov8.rs
api/src/handlers/: mod.rs  websocket.rs
api/src/tests/: computer_vision.rs  mod.rs
embedded/: Cargo.toml  Justfile  build.rs  cfg.toml.example  sdkconfig.defaults
embedded/flasher/: go.mod  main.go
embedded/src/: lib.rs  main.rs
embedded/src/configs/: camera.rs  flash.rs  mod.rs  wifi.rs
embedded/src/utils/: http_client.rs  mod.rs  multipart_form.rs
frontend/: video.html
nix/shells/: esp-shell.nix
