[package]
name = "yolo_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "yolo_rs"
crate-type = ["cdylib"]

[dependencies]
ort = { version = "1.16.3", default-features = false, features = ["load-dynamic", "copy-dylibs", "half"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }
imageproc = { version = "0.23.0", default-features = false }
chrono = { version = "0.4.30" }
regex = { version = "1.5.4" }
anyhow = { version = "1.0.75" }
clap = { version = "4.2.4", features = ["derive"] }
ndarray = { version = "0.15.6" }
half = { version = "2.3.1" }
rusttype = { version = "0.9", default-features = false }
rand = { version = "0.8.5" }
dirs = { version = "5.0.1" }
ureq = { version = "2.9.1" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tracing = "0.1.40"
